# california-stats

./: .gitignore  CLAUDE.md  README.md  config.json  index.html  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.local.json
california_stats/: .gitignore  CLAUDE.md
california_stats/.beads/: config.yaml  issues.jsonl
california_stats/notebooks/: 01_data_collection.ipynb  02_assessment_ratio_map.ipynb  03_top_bottom_counties.ipynb  04_revenue_gap_map.ipynb  05_income_correlation.ipynb
california_stats/src/: ca_data.py
data/processed/: county_prop13.csv
data/raw/: census_acs_2022.csv  zillow_zhvi.csv
docs/: report.html
notebooks/: 01_data_collection.ipynb  02_assessment_ratio_map.ipynb  03_top_bottom_counties.ipynb  04_revenue_gap_map.ipynb  05_income_correlation.ipynb
scripts/: fetch_census_data.py  fetch_zillow_data.py  generate_html.py
src/: ca_data.py
