[project]
name = "california-prop13-analysis"
version = "0.1.0"
description = "California Prop 13 property tax disparity analysis by county"
requires-python = ">=3.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "plotly>=5.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "papermill>=2.6.0",
    "nbconvert>=7.0.0",
    "scipy>=1.13.0",
]

